data/derived/sp14/progs/unify/prog2117.ml.out
Characters 16-20:
  let pipe = fun2 fun1;;
                  ^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
